# rank-ops

./: .env.example  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AB_design.md  Dockerfile  LICENSE  Makefile  README.md  architecture.md  cloudbuild.yaml  fairness_metrics.md  feature_catalog.md  incident_runbook.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: main.py
data/: README.md  feature_catalog.yaml
data/sample/ml-25m/: ratings_50k.csv
docs/: ab_test_plan.md  architecture.mmd  business_case.md  deploy.md  incident_playbook.md  index.html
infra/: Dockerfile  deploy.sh
models/: README.md
notebooks/: 01_data_inspection.ipynb  features_quickstart.py
scripts/: download_data.sh  init_repo.sh  sample_data.sh
sql/: features.sql  schema.sql  sessionize.sql
src/: app.py  bandit.py  candidates.py  data.py  metrics.py  models.py  monitor.py  ope.py  smoke.py  train.py
src/rank_ops/: __init__.py
src/rankops/: __init__.py  api_server.py  bandits.py  candidate_generation.py  data_ingestion.py  ope.py  ranker.py  simulator.py  sql_utils.py
tests/: test_bandits.py  test_data_ingestion.py  test_features.py  test_ope.py  test_smoke.py
